; ModuleID = '/home/carl/AnghaBench/freebsd/tools/tools/ath/athalq/extr_main.c_ath_alq_print_hdr.c'
source_filename = "/home/carl/AnghaBench/freebsd/tools/tools/ath/athalq/extr_main.c_ath_alq_print_hdr.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.if_ath_alq_init_state = type { i32, i32, i32, i32 }

@.str = private unnamed_addr constant [38 x i8] c"macVersion=%d.%d, PHY=%d, Magic=%08x\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.if_ath_alq_init_state*)* @ath_alq_print_hdr to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @ath_alq_print_hdr(%struct.if_ath_alq_init_state* %0) #0 {
  %2 = alloca %struct.if_ath_alq_init_state*, align 8
  store %struct.if_ath_alq_init_state* %0, %struct.if_ath_alq_init_state** %2, align 8
  %3 = load %struct.if_ath_alq_init_state*, %struct.if_ath_alq_init_state** %2, align 8
  %4 = getelementptr inbounds %struct.if_ath_alq_init_state, %struct.if_ath_alq_init_state* %3, i32 0, i32 3
  %5 = load i32, i32* %4, align 4
  %6 = call i32 @be32toh(i32 %5)
  %7 = load %struct.if_ath_alq_init_state*, %struct.if_ath_alq_init_state** %2, align 8
  %8 = getelementptr inbounds %struct.if_ath_alq_init_state, %struct.if_ath_alq_init_state* %7, i32 0, i32 2
  %9 = load i32, i32* %8, align 4
  %10 = call i32 @be32toh(i32 %9)
  %11 = load %struct.if_ath_alq_init_state*, %struct.if_ath_alq_init_state** %2, align 8
  %12 = getelementptr inbounds %struct.if_ath_alq_init_state, %struct.if_ath_alq_init_state* %11, i32 0, i32 1
  %13 = load i32, i32* %12, align 4
  %14 = call i32 @be32toh(i32 %13)
  %15 = load %struct.if_ath_alq_init_state*, %struct.if_ath_alq_init_state** %2, align 8
  %16 = getelementptr inbounds %struct.if_ath_alq_init_state, %struct.if_ath_alq_init_state* %15, i32 0, i32 0
  %17 = load i32, i32* %16, align 4
  %18 = call i32 @be32toh(i32 %17)
  %19 = call i32 @printf(i8* getelementptr inbounds ([38 x i8], [38 x i8]* @.str, i64 0, i64 0), i32 %6, i32 %10, i32 %14, i32 %18)
  ret void
}

declare dso_local i32 @printf(i8*, i32, i32, i32, i32) #1

declare dso_local i32 @be32toh(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
